--- a/raffle_telegram_bot/requirements.txt
+++ b/raffle_telegram_bot/requirements.txt
@@ -7,7 +7,7 @@ h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
 idna==3.4
-install==1.3.5
+Pillow==10.1.0
 pycparser==2.21
 python-dotenv==1.0.0
 python-telegram-bot==20.6
