--- a/raffle_telegram_bot/.env_example
+++ b/raffle_telegram_bot/.env_example
@@ -1,2 +1,3 @@
 TOKEN=token
 AES_KEY="aes" # https://codesandbox.io/p/devbox/generate-aes-key-2kcr6g
+EXTRACTOR_RED_RECTANGLE_API="https://opencv-extract-rectangle-area-image-api.onrender.com/" # https://github.com/JoaoEmanuell/opencv-extract-rectangle-area-image-api
