--- a/raffle_telegram_bot/requirements.txt
+++ b/raffle_telegram_bot/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.1.0
 certifi==2023.11.17
 cffi==1.16.0
+charset-normalizer==3.3.2
 cryptography==41.0.5
 greenlet==3.0.1
 h11==0.14.0
@@ -11,7 +12,9 @@ Pillow==10.1.0
 pycparser==2.21
 python-dotenv==1.0.0
 python-telegram-bot==20.6
+requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 SQLAlchemy-Utils==0.41.1
 typing_extensions==4.8.0
+urllib3==2.1.0
