--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: '3.7'
 
 services:
-    raffle-telegram-bot-develop:
+    raffle-telegram-bot-production:
         build: .
         volumes:
-            - .:/usr/src/app
+            - ./database:/usr/src/app/database # database
         ports:
             - '8000:8000'
         restart: always
-        command: tail -F anything
